...
            children: [
              // Header
              Row(
                mainAxisAlignment: MainAxisAlignment.center,
                children: [
                  const Text(
                    'Welcome Back!',
                    style: TextStyle(
                      fontFamily: 'Outfit',
                      fontSize: 32,
                      fontWeight: FontWeight.bold,
                      color: Color(0xFF374957),
                    ),
...
              const SizedBox(height: 16),

              // Actions
              _isLoading
                  ? const Center(child: CircularProgressIndicator())
                  : PrimaryButton(
                      text: 'Log in',
                      onPressed: _handleLogin,
                    ),
              const SizedBox(height: 10),
              // Bottom link
              Row(
                mainAxisAlignment: MainAxisAlignment.center,
...
                        MaterialPageRoute(
                          builder: (_) => const UserSignupPage(),
                        ),
                      );
                    },
                    child: const Text(
                      'Sign Up',
                      style: TextStyle(
                        color: Color(0xFF3293B3),
                        fontWeight: FontWeight.bold,
                        fontSize: 14,
                      ),
                    ),
...
